--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project: Landing Page</title>
+    <title>DOM Manipulation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <h1>Books in the Library</h1>
+    <button id="addBookBtn">New Book</button>
+
+    <dialog id="form-section">
+        <form id="addBook-form">
+
+            <!-- Title -->
+            <div class="div-title">
+                <label for="title">Title: </label>
+                <input type="text" id="title" required placeholder="The Great Gatsby">
+            </div>
+
+            <!-- Author -->
+            <div class="div-author">
+                <label for="author">Author: </label>
+                <input type="text" id="author" required placeholder="Scott Fitzgerald">
+            </div>
+
+            <!-- Pages -->
+            <div class="div-pages">
+                <label for="pages">Number of Pages: </label>
+                <input type="number" id="pages" required min="1" placeholder="200">
+            </div>
+
+            <!-- Read Status -->
+            <div class="div-readStatus">
+                <input type="checkbox" id="readStatus">
+                <label for="readStatus">Have you Read this book?</label>
+            </div>
+
+            <div id="actionButtons">
+                <button type="submit" id="submitForm">Submit</button>
+                <button type="button" id="cancelForm">Cancel</button>
+            </div>
+        </form>
+    </dialog>
+
+    <div id="library-wrapper">
+        <div class="library-header">
+            <span>Title</span>
+            <span>Author</span>
+            <span>Pages</span>
+            <span>Read Status</span>
+            <span>Action</span>
+        </div>
+        <div class="library-container"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
